Added permission checks to most permission routes
